[gd_scene load_steps=21 format=3 uid="uid://crtugfpy0cjod"]

[ext_resource type="Script" uid="uid://kt6ob3p4g3oh" path="res://src/gameplay/mechanics/inventory/inventory_item_detail/inventory_item_detail_ui.gd" id="1_2ld60"]
[ext_resource type="Texture2D" uid="uid://en2ws0o3r862" path="res://assets/ui/user_interface.png" id="1_iwre5"]
[ext_resource type="Theme" uid="uid://bt4xc82v1emtq" path="res://src/ui/themes/btn_close_inventory.tres" id="3_1icw5"]
[ext_resource type="Texture2D" uid="uid://bup16gck8m42v" path="res://assets/ui/buttons.png" id="4_catel"]
[ext_resource type="Theme" uid="uid://cplm3n583p8ad" path="res://src/ui/themes/v_scroll_without_bar.tres" id="4_m0r25"]
[ext_resource type="FontFile" uid="uid://cs7pj0a4nowjm" path="res://assets/fonts/alagard.ttf" id="5_1xqwx"]
[ext_resource type="PackedScene" uid="uid://cn0pvgdkima5h" path="res://src/ui/description_text.tscn" id="5_kfg2u"]
[ext_resource type="PackedScene" uid="uid://c0c5fotfyaqcc" path="res://src/gameplay/mechanics/inventory/inventory_item_detail/item_price.tscn" id="6_n44wp"]
[ext_resource type="PackedScene" uid="uid://dh3yligryu8qj" path="res://src/ui/default_label.tscn" id="7_0g36l"]
[ext_resource type="PackedScene" uid="uid://bhgraytntqqmu" path="res://src/gameplay/mechanics/inventory/inventory_item_detail/gem_available_slot_info_ui.tscn" id="7_5ona2"]
[ext_resource type="PackedScene" uid="uid://db24xs6jb4xpd" path="res://src/gameplay/mechanics/inventory/inventory_item_detail/equipment_sockets_slots/equip_gem_sockets_slots.tscn" id="8_gv3lo"]
[ext_resource type="Theme" uid="uid://cjghsixcdlswl" path="res://src/ui/themes/item_info_action_btn.tres" id="8_hdk3s"]
[ext_resource type="Theme" uid="uid://btcervn7s00qx" path="res://src/ui/themes/button_toggle.tres" id="9_8rhx0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kfg2u"]
texture = ExtResource("1_iwre5")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(784, 208, 48, 48)

[sub_resource type="ButtonGroup" id="ButtonGroup_kfg2u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n44wp"]
atlas = ExtResource("4_catel")
region = Rect2(214, 69, 23, 23)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n44wp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkmh"]
atlas = ExtResource("4_catel")
region = Rect2(272, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdk3s"]
atlas = ExtResource("4_catel")
region = Rect2(208, 16, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rhx0"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.609616, 0.435565, 5.77569e-07, 1)
border_blend = true

[node name="InventoryItemDetailUI" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ld60")
metadata/_edit_lock_ = true

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(420, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -210.0
offset_right = 170.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_kfg2u")
metadata/_edit_lock_ = true

[node name="RarityTexture" type="TextureRect" parent="Panel"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -210.0
offset_right = 210.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("4_m0r25")

[node name="ContentContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Header" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="ItemName" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header"]
custom_minimum_size = Vector2(380, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_1xqwx")
theme_override_font_sizes/font_size = 24
text = "Item Name"
autowrap_mode = 3

[node name="ItemType" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "--/--"
autowrap_mode = 3

[node name="LevelContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header/LevelContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "Lv."

[node name="Value" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header/LevelContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "--"

[node name="BaseStatsContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="LabelType" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header/BaseStatsContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "Damage:"

[node name="LabelValues" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header/BaseStatsContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "xxx - xxx"

[node name="PowerValue" type="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Header/BaseStatsContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_1xqwx")
text = "Power: xxxx"

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="MainAttributesContent" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AttributeList" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/MainAttributesContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="ItemTextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/MainAttributesContent"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="DescriptionText" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content" instance=ExtResource("5_kfg2u")]
layout_mode = 2

[node name="GemAvailableSlotInfo" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content" instance=ExtResource("7_5ona2")]
visible = false
layout_mode = 2

[node name="EquipmentGemSocketsSlots" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content" instance=ExtResource("8_gv3lo")]
visible = false
layout_mode = 2

[node name="SetBonusAttributesContent" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/SetBonusAttributesContent" instance=ExtResource("7_0g36l")]
layout_mode = 2
text = "Set Bonus:"

[node name="ItemQuickSlotSelection" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content"]
layout_mode = 2

[node name="DefaultLabel" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/ItemQuickSlotSelection" instance=ExtResource("7_0g36l")]
layout_mode = 2
size_flags_vertical = 4
text = "Quick Slot:"

[node name="Button1" type="Button" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/ItemQuickSlotSelection"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("9_8rhx0")
toggle_mode = true
button_group = SubResource("ButtonGroup_kfg2u")
text = "1"

[node name="Button2" type="Button" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/ItemQuickSlotSelection"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("9_8rhx0")
toggle_mode = true
button_group = SubResource("ButtonGroup_kfg2u")
text = "2"

[node name="Button3" type="Button" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/ItemQuickSlotSelection"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("9_8rhx0")
toggle_mode = true
button_group = SubResource("ButtonGroup_kfg2u")
text = "3"

[node name="PotionCooldownInfo" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content"]
layout_mode = 2

[node name="CooldownLabel" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content/PotionCooldownInfo" instance=ExtResource("7_0g36l")]
layout_mode = 2
text = "Cooldown:"

[node name="ItemPrice" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Content" instance=ExtResource("6_n44wp")]
layout_mode = 2
size_flags_vertical = 2

[node name="Footer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/ContentContainer"]
custom_minimum_size = Vector2(372, 64)
layout_mode = 2
size_flags_vertical = 10

[node name="ActionButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Footer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_hdk3s")
text = "Does Something..."
clip_text = true

[node name="TrashItemButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/ContentContainer/Footer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8_hdk3s")
icon = SubResource("AtlasTexture_n44wp")
icon_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="AdvancedViewButton" type="Button" parent="Panel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("3_1icw5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n44wp")
icon = SubResource("AtlasTexture_3tkmh")
icon_alignment = 1
expand_icon = true

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme = ExtResource("3_1icw5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n44wp")
icon = SubResource("AtlasTexture_hdk3s")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="UniqueBorder" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 3.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8rhx0")

[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/ContentContainer/Footer/TrashItemButton" to="." method="_on_trash_item_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Buttons/AdvancedViewButton" to="." method="_on_advanced_view_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Buttons/CloseButton" to="." method="_on_close_button_pressed"]
